--- a/assets/css/blocks/intro.less
+++ b/assets/css/blocks/intro.less
@@ -11,7 +11,7 @@
 	border-bottom: 1px solid fade(@gray, 30%);
 	padding-bottom: 120px;
 	position: relative;
-    background: url(./assets/img/symbols.png) right bottom no-repeat;
+    background: url("../img/symbols.png") right bottom no-repeat;
     
     @media @tablet {
         padding-top: 40px;
