исправлен путь для background в reviews

--- a/assets/css/blocks/reviews.less
+++ b/assets/css/blocks/reviews.less
@@ -2,7 +2,7 @@
 
 .reviews {
 	background-color: #332F30;
-	background-image: url(/assets/img/reviewsbg.png);
+	background-image: url(../img/reviewsbg.png);
 	background-position: center;
 	background-repeat: no-repeat;
 	padding: 68px 0;
